# RandomFields_dev

./: .gitignore  0  README.md  TeamName-1b-1.csv  dataset_1.RDS  dataset_3.RDS
RandomFields/: DESCRIPTION  NAMESPACE  config.status  configure  configure.ac
RandomFields/R/: Class.R  Crossvalidation.R  D.H.R  Hints.R  Likelihoodratio.R  Methods-RFsp.R  Methods-aux.R  RFempvario-Methods-plots.R  RFempvario.R  RFfit.R  RFgui.R  RMmodels-Methods-plots.R  RMmodels.R  RMmodelsBasics.R  RMmodelsConvenience.R  RMmodelsSpecial.R  aaa_auto.R  aaa_globals.R  basic.fctns.R  bigdata.R  convert.R  fitbr.R  fitgauss.R  fitmaxstable.R  fitpoisson.R  generatemodels.R  getNset.R  helmholz.R  internal_use.R  kriging.R  obsolete.R  rf-plots.R  rf.R  simu-plots.R  unify.R  xport_import.R  zzz.R
RandomFields/inst/: CITATION
RandomFields/man/: BRmethods.Rd  Bayesian.Rd  Changings.Rd  CoordinateSystems.Rd  MajorRevisions.Rd  QMath.Rd  RC.Rd  RFboxcox.Rd  RFcov.Rd  RFcrossvalidate.Rd  RFdistr.Rd  RFempVariog-class.Rd  RFfit.Rd  RFfitOptimiser.Rd  RFformula.Rd  RFformulaAdvanced.Rd  RFfractaldim.Rd  RFgetModel.Rd  RFgetModelInfo.Rd  RFgui.Rd  RFhurst.Rd  RFinterpolate.Rd  RFlinearpart.Rd  RFloglikelihood.Rd  RFmadogram.Rd  RFoptions.Rd  RFoptionsAdvanced.Rd  RFoptionsFit.Rd  RFoptionsMessages.Rd  RFpar.Rd  RFplot.Rd  RFpseudomadogram.Rd  RFpseudovariogram.Rd  RFratiotest.Rd  RFsimulate.Rd  RFsimulate.more.examples.Rd  RFsimulateAdvanced.Rd  RFsp-class.Rd  RFspatialGridDataFrame-class.Rd  RFspatialPointsDataFrame-class.Rd  (+67 more)
RandomFields/man/macros/: allg_defn.Rd  def.Rd  lit.Rd
RandomFields/src/: AutoRandomFields.cc  AutoRandomFields.h  Brown.cc  Coordinate_systems.cc  Coordinate_systems.h  D.H.cc  Error.cc  Error.h  Gneiting.cc  Huetchen.cc  InternalCov.cc  InternalCov.noncritical.cc  KeyInfo.cc  MLE.cc  Machine.h  MachineDebugging.h  MachineOthers.h  MachineSchlather.cc  MachineSchlather.h  Makevars  Makevars.in  NULL.cc  Options.cc  Options.h  PoissonPolygon.h  Processes.h  QMath.cc  QMath.h  RF.h  RMS.cc  RandomFields.h  Specific.cc  auxiliary.cc  auxiliary.h  avltr.h  avltr_modified.cc  avltr_modified.h  basic.h  bigdata.cc  brownresnick.cc  (+57 more)
RandomFieldsUtils/: DESCRIPTION  NAMESPACE  config.status  configure  configure.ac
RandomFieldsUtils/R/: RFoptions.R  aaa_auto.R  internal_use.R  utils.R  zzz.R
RandomFieldsUtils/inst/include/: Basic_utils.h  General_utils.h  Options_utils.h  RandomFieldsUtils.h  Solve.h  errors_messages.h  options.h  own.h  xport_import.h  zzz_RandomFieldsUtils.h
RandomFieldsUtils/man/: RFoptions.Rd  cpu.Rd  internal.Rd  solvePosDef.Rd
RandomFieldsUtils/src/: AutoRandomFieldsUtils.cc  AutoRandomFieldsUtils.h  AutoRandomFieldsUtilsLocal.h  Basic_utils.h  General_utils.h  Makevars  Makevars.in  Options_utils.h  RFU.h  RFoptions.cc  Solve.h  Utils.h  beskf.cc  intrinsics.h  kleinkram.cc  kleinkram.h  linear.cc  maths.cc  options.cc  options.h  own.cc  own.h  scalar.cc  solve.cc  solve_gpu.cu  utils.cc  xport_import.cc  xport_import.h  zzz.c  zzz_RandomFieldsUtils.h
kaust/: 2a-1_fit.RDS  2a-2_fit.RDS  2a_fit.RDS  2a_parallel_fit.sh  2b_fit-1.RDS  2b_fit-2.RDS  2b_log-1.txt  2b_log-2.txt  2b_parallel_fit.sh  2b_time-1.txt  2b_time-2.txt  dataset_10.RDS  dataset_12.RDS  dataset_13.RDS  dataset_2.RDS  dataset_4.RDS  dataset_5.RDS  dataset_6.RDS  dataset_8.RDS  dataset_9.RDS  dataset_update2_1.RDS  dataset_update2_10.RDS  dataset_update2_11.RDS  dataset_update2_12.RDS  dataset_update2_13.RDS  dataset_update2_14.RDS  dataset_update2_15.RDS  dataset_update2_16.RDS  dataset_update2_2.RDS  dataset_update2_3.RDS  dataset_update2_4.RDS  dataset_update2_5.RDS  dataset_update2_6.RDS  dataset_update2_7.RDS  dataset_update2_8.RDS  dataset_update2_9.RDS  dataset_update_1.RDS  dataset_update_10.RDS  dataset_update_11.RDS  dataset_update_12.RDS  (+22 more)
kaust/delivery/: Mannheim-1a.csv  Mannheim-1b-1.csv  Mannheim-1b-11.csv  Mannheim-1b-12.csv  Mannheim-1b-15.csv  Mannheim-1b-5.csv  Mannheim-1b-9.csv  TeamMS-2a-1.csv  TeamMS-2b-time.csv  TeamMS-Description.txt
kaust/delivery/Subcompetition_1a/: TeamMS-1a.csv
kaust/delivery/Subcompetition_1b/: TeamMS-1b-10.csv  TeamMS-1b-13.csv  TeamMS-1b-14.csv  TeamMS-1b-16.csv  TeamMS-1b-2.csv  TeamMS-1b-3.csv  TeamMS-1b-4.csv  TeamMS-1b-6.csv  TeamMS-1b-7.csv  TeamMS-1b-8.csv  TeamMS-1b-time.csv
kaust/delivery/Subcompetition_2a/: TeamMS-2a-2.csv  TeamMS-2a-hardware.txt  TeamMS-2a-time.csv
kaust/delivery/Subcompetition_2b/: TeamMS-2b-1.csv  TeamMS-2b-2.csv
